--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -132,7 +132,9 @@ span {
   margin-top: auto;
   flex-direction: column;
   position: relative;
-  width: 290px;
+  /* width: 290px; */
+  max-width:290px;
+  max-height:500px;
   background: linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
   background: -webkit-linear-gradient(
     90deg,
@@ -229,3 +231,30 @@ a {
 .pos {
   position: relative;
 }
+
+/* search bar*/
+.search{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  
+ }
+ #search-icon{
+   width: 45px;
+   border-radius: 6px;
+ }
+ #search-icon:hover{
+   cursor: pointer;
+ }
+ .search-bar{
+   margin: 10px;
+   padding: 5px;
+   width: 40%;
+   height: 40px;
+   /* border-radius: 10px; */
+ }
+ .hide{
+   display: none;
+ }
