Button disabled unless all fields are filled

--- a/style.css
+++ b/style.css
@@ -344,6 +344,13 @@ span {
   box-shadow: none;
 }
 
+.btn:disabled{
+  cursor: not-allowed;
+  pointer-events: none;
+  transition: none;
+  opacity: 0.5;
+}
+
 .email-link {
   position: relative;
   display: inline-block;
