--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -86,6 +86,9 @@ span {
 
 .services-container .services-box {
   flex: 1 1 30rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
   background: var(--second-color);
   padding: 3rem 2rem 4rem;
   border-radius: 2rem;
@@ -149,7 +152,7 @@ span {
   opacity: 1;
   cursor: pointer;
   transform: translateY(0px);
-  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .fcard-content {
@@ -158,8 +161,9 @@ span {
 }
 
 .fcard:hover {
-  box-shadow: 2px 2px 10px rgba(185, 185, 106, 0.8);
-  transform: scale(1.1);
+  /* box-shadow: 2px 2px 10px rgba(185, 185, 106, 0.8); */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
 }
@@ -190,7 +194,11 @@ span {
   text-align: justify;
   display: flex;
   flex-direction: column;
+  transition: color 0.3s ease-in-out;
   height: 100%;
+}
+.article:hover {
+  color: #006400; /* Change to your desired color on hover */
 }
 
 a {
@@ -235,24 +243,38 @@ a {
 /* search bar*/
 .search {
   display: flex;
-  text-align: center;
+  /* text-align: center; */
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  position: relative;
+  margin: 20px 0;
+  /* flex-direction: row; */
 }
 #search-icon {
   width: 45px;
+  margin-left: 10px;
   border-radius: 6px;
+  transition: transform 0.3s ease;
+  
 }
 #search-icon:hover {
   cursor: pointer;
+  transform: scale(1.1);
 }
 .search-bar {
   margin: 10px;
-  padding: 5px;
-  width: 40%;
+  padding: 10px;
+  width: 50%;
+  border: 2px solid #064b10;
   height: 40px;
-  /* border-radius: 10px; */
+  border-radius: 5px; 
+  transition: all 0.3s ease;
+  font-size: 16px;
+}
+.search-bar:focus {
+  outline: none;
+  border-color: #c0df64;
+  box-shadow: 0 0 10px rgba(192, 223, 100, 0.5);
 }
 .hide {
   display: none;
