--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -28,7 +28,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-
+  margin-top: 60px;
   color: var(--txt-color);
 }
 body::-webkit-scrollbar {
@@ -48,7 +48,7 @@ section {
 }
 
 .heading {
-  padding: 20px;
+  padding: 15px;
   text-align: center;
   font-size: 3rem;
   background-color: aliceblue;
@@ -58,10 +58,10 @@ section {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   text-align: left;
   opacity: 0.8;
-  position: fixed;
-  top: 0;
+  position:relative;
+  top: 60px;
   left: 0;
-  z-index: 100;
+  /* z-index: 100; */
   text-align: center;
   display: flex;
   justify-content: space-between;
@@ -256,4 +256,65 @@ a {
 }
 .hide {
   display: none;
+}
+/* navbar */
+.header
+ {
+  position: fixed;
+  opacity: 0.8;
+   top: 0;
+   left: 0;
+   width:100%;
+   padding:2rem 9%;
+   background-color: var(--bg-color);
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   z-index: 10000;
+   transition: all 0.8s;
+ }
+ .header.sticky
+ {
+  opacity: 0.9;
+  padding: 2rem 5%;
+  background-color: rgb(4, 125, 18);
+  box-shadow: 0 0 1.5px 2px rgb(14, 14, 14,0.8);
+ }
+
+ .logo
+ {
+    font-size: 2.5rem;
+    color: var(--txt-color);
+    font-weight: 600;
+    cursor: default;
+ }
+ .navbar a {
+  /* position: relative; */
+  font-size: 2rem;
+  /* left: 118px; */
+  color: var(--txt-color);
+  margin-left: 4rem;
+  transition: 0.3s;
+}
+.navbar a:hover {
+  color: var(--main-color);
+}
+.navbar a:not(.active):hover {
+  color: var(--main-color);
+}
+
+
+.navbar a.active,
+.navbar a.active:hover {
+  color: var(--main-color);
+}
+  .navbar.active {
+  display: block;
+}
+.logoImg {
+  width: 80px;
+  height: auto; /* Use auto to maintain aspect ratio */
+  max-width: 100%;
+
+  margin-right: 5px; /* Adjust margin as needed */
 }
